# simple_ledger

./: README.md  pyproject.toml  requirements.txt  test.py  todos.txt  tree.html
.github/workflows/: pyinstaller_archarm.yaml  pyinstaller_win.yaml
DB-opt/: test.db
simple_ledger/: __init__.py  _config.py  _db.py  _log.py  cli.py  cui.py  db.py  log.py
simple_ledger/backend/: _db.py  db.py
simple_ledger/cli/: __init__.py  add_entry.py  login.py  pyledger.py  startup.py
simple_ledger/core/: __init__.py
simple_ledger/core/accounts_handler/: __init__.py  create_account.py  delete_account.py  update_account.py
simple_ledger/core/database/: __init__.py  _db.py  db.py
simple_ledger/fletter/: controls.py  fletter.py  fletter2.py
simple_ledger/more/debugging/: logger.py
simple_ledger/utils/: __init__.py  config_handler.py  logger.py  password_maker.py  timer.py
simple_ledger/utils/config/: _config.py  config.py
simple_ledger/utils/file_handling/: file_ops.py
simple_ledger/utils/rich_printing/: _get_console.py  _print_tables.py
